[gd_scene load_steps=4 format=2]

[ext_resource path="res://GamePieces/game_piece.gd" type="Script" id=1]
[ext_resource path="res://Elements/86_white wood grain texture-seamless.jpg" type="Texture" id=2]
[ext_resource path="res://sounds/zapsplat_foley_wood_plank_1x4_drop_or_set_down_010_100254.mp3" type="AudioStream" id=3]

[node name="LongBoyLeft" type="RigidBody2D"]
rotation = 1.11279
collision_layer = 3
collision_mask = 3
script = ExtResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
texture = ExtResource( 2 )
polygon = PoolVector2Array( -8, -50, 8, -50, 8, 50, -8, 50 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -8, -50, 8, -50, 8, 50, -8, 50 )

[node name="MouseArea" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MouseArea"]
polygon = PoolVector2Array( -9, -51, 9, -51, 9, 51, -9, 51 )

[node name="IdleTimer" type="Timer" parent="."]

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 1.19209e-06, -1.49012e-06 )
scale = Vector2( 0.0976562, 0.0976562 )
stream = ExtResource( 3 )

[connection signal="body_entered" from="MouseArea" to="." method="_on_MouseArea_body_entered"]
[connection signal="mouse_entered" from="MouseArea" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MouseArea" to="." method="_on_mouse_exited"]
